--- a/package.json
+++ b/package.json
@@ -25,10 +25,12 @@
   "bugs": {
     "url": "http://github.com/Adphorus/react-date-range/issues"
   },
+  "peerDependencies": {
+    "react": "^0.14.8"
+  },
   "dependencies": {
     "classnames": "^2.2.1",
-    "moment": "^2.10.6",
-    "react": "^0.14.8"
+    "moment": "^2.10.6"
   },
   "devDependencies": {
     "babel": "^5.8.23"
