--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "url": "http://github.com/Adphorus/react-date-range/issues"
   },
   "peerDependencies": {
-    "react": "^0.14.8"
+    "react": "^0.14.8 || ^15.4.1"
   },
   "dependencies": {
     "classnames": "^2.2.1",
